Scroll Indicator Added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             </ul>
         </nav>
         
+        <div class="scroll-ind">
+            <div class="scroll-ind-filled"></div>
+        </div>
+
         <div class="content">
             <h4 class='content-h4'>سلام، من</h4>
             <h1 class='content-h1'>علی ناظری</h1>
@@ -65,5 +69,6 @@
             </button>
         </div>
     </div>
+    <script src="functions.js"></script>
 </body>
 </html>
