--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <h4 class='content-h4'>سلام، من</h4>
             <h1 class='content-h1'>علی ناظری</h1>
             <h3 class='content-h3'>یک برنامه نویس وب هستم</h3>
+            <a class="resume-link" href="./Resources/resume.pdf">
+                رزومه من
+            </a>
         </div>
     </div>
 
